2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add application/x-bzip2 as an alias
	for bz2 archives, as used on Sourceforge, patch by Loïc Minier
	<lool+freedesktop@via.ecp.fr> (Closes: #9737)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Loïc Minier
	<lool+freedesktop@via.ecp.fr> to recognise Makefiles
	with shebang magic as well as name (Closes: #9738)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* po/az.po:
	* po/bg.po:
	* po/cs.po:
	* po/cy.po:
	* po/da.po:
	* po/de.po:
	* po/el.po:
	* po/eo.po:
	* po/es.po:
	* po/eu.po:
	* po/fi.po:
	* po/fr.po:
	* po/hu.po:
	* po/it.po:
	* po/ja.po:
	* po/ko.po:
	* po/lt.po:
	* po/ms.po:
	* po/nb.po:
	* po/nl.po:
	* po/nn.po:
	* po/pl.po:
	* po/pt.po:
	* po/pt_BR.po:
	* po/ru.po:
	* po/rw.po:
	* po/sq.po:
	* po/sr.po:
	* po/sv.po:
	* po/uk.po:
	* po/vi.po:
	* po/zh_CN.po:
	* po/zh_TW.po: s/CPIP/CPIO/ (Closes: #9814)
	Spotted by Goran Uddeborg <goeran@uddeborg.se>

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: lower the prio of the audio/x-matroska to 50,
	so that detection can happen based on suffix as well

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Ville Skyttä <ville.skytta@iki.fi>
	to use the preferred Matroska mime-types, add Matroska audio support
	(Closes: #9788)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Move *.ram to application/ram, patch
	from Daniel Yek <dyek@real.com> (Closes: #9750)

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Make PGM, PBM and PPM sub-classes
	of PNM (RH #118847)

2007-02-01  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Bill Alexander
	<billtrash@gmail.com> to add application/x-msexcel as an
	alias for Excel files (RH #197887)

2007-01-23  Bastien Nocera  <hadess@hadess.net>
