@@ -1,9 +1,8 @@
-dnl Process this file with autoconf to produce a configure script.
+AC_INIT([shared-mime-info],[0.19],[https://bugs.freedesktop.org/enter_bug.cgi?product=shared-mime-info])
 
-AC_INIT(freedesktop.org.xml.in)
-AM_INIT_AUTOMAKE(shared-mime-info, 0.19)
+AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2])
 
-AM_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADERS([config.h])
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -42,11 +41,10 @@ AC_ARG_ENABLE(update-mimedb,
     enable_update_mimedb=yes)
  AM_CONDITIONAL(ENABLE_UPDATE_MIMEDB, test x$enable_update_mimedb = xyes)
 
-mimedir=['${datadir}/mime']
-AC_SUBST(mimedir)
-
-AC_OUTPUT(
+AC_CONFIG_FILES([
 Makefile
 shared-mime-info.pc
 po/Makefile.in
-)
+])
+
+AC_OUTPUT
